--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -2,41 +2,41 @@ extends layout
 
 block content
   - var enderecoFormatado = `${place.address.street}, ${place.address.number}, ${place.address.complement}, ${place.address.district}\n ${place.address.city} - ${place.address.state}, CEP: ${place.address.zipcode}`;
-
-    .row
-      .col-md-12
-        #theCarousel.carousel.slide.multi-item-carousel
-          .carousel-inner
-            each photo, index in photos
-              .carousel-item(class="#{index == 0 ? 'active' : ''}")
-                  .col-xs-4(style="background:url(#{photo.large}) no-repeat center center/cover;height:400px")
-                    .carousel-caption
-                      small Autor: #{photo.creation.author.name}
-                      br
-                      small Enviado: #{new Date(photo.creation.created).toLocaleDateString()}
-                
-          a.left.carousel-control(href='#theCarousel', data-slide='prev')
-            i.glyphicon.glyphicon-chevron-left
-          a.right.carousel-control(href='#theCarousel', data-slide='next')
-            i.glyphicon.glyphicon-chevron-right
-      script.
-        $('.multi-item-carousel').carousel({
-          interval: false
-        });
-        
-        $('.multi-item-carousel .carousel-item').each(function(){
-          var next = $(this).next();
-          if (!next.length) {
-            next = $(this).siblings(':first');
-          }
-          next.children(':first-child').clone().appendTo($(this));
+    if photo
+      .row
+        .col-md-12
+          #theCarousel.carousel.slide.multi-item-carousel
+            .carousel-inner
+              each photo, index in photos
+                .carousel-item(class="#{index == 0 ? 'active' : ''}")
+                    .col-xs-4(style="background:url(#{photo.large}) no-repeat center center/cover;height:400px")
+                      .carousel-caption
+                        small Autor: #{photo.creation.author.name}
+                        br
+                        small Enviado: #{new Date(photo.creation.created).toLocaleDateString()}
+                  
+            a.left.carousel-control(href='#theCarousel', data-slide='prev')
+              i.glyphicon.glyphicon-chevron-left
+            a.right.carousel-control(href='#theCarousel', data-slide='next')
+              i.glyphicon.glyphicon-chevron-right
+        script.
+          $('.multi-item-carousel').carousel({
+            interval: false
+          });
           
-          if (next.next().length>0) {
-            next.next().children(':first-child').clone().appendTo($(this));
-          } else {
-          	$(this).siblings(':first').children(':first-child').clone().appendTo($(this));
-          }
-        });
+          $('.multi-item-carousel .carousel-item').each(function(){
+            var next = $(this).next();
+            if (!next.length) {
+              next = $(this).siblings(':first');
+            }
+            next.children(':first-child').clone().appendTo($(this));
+            
+            if (next.next().length>0) {
+              next.next().children(':first-child').clone().appendTo($(this));
+            } else {
+            	$(this).siblings(':first').children(':first-child').clone().appendTo($(this));
+            }
+          });
           
           
           
@@ -72,14 +72,14 @@ block content
               | #{place.address.street} - #{place.address.city} - #{place.address.state} - CEP: #{place.address.zipcode}
               br
               small #{place.address.complement}
-                
-            h4.display-5 Telefone(s)
-            ul
-              each phone in place.phones
-                li(style="list-style:none")
-                  i.fa.fa-phone 
-                  | &nbsp; #{phone}
-                    
+            if place.phones    
+              h4.display-5 Telefone(s)
+              ul
+                each phone in place.phones
+                  li(style="list-style:none")
+                    i.fa.fa-phone 
+                    | &nbsp; #{phone}
+                      
           if place.tags
             ul.place-tags.clearfix
               each tag in place.tags
@@ -97,7 +97,8 @@ block content
           each avaliacao in reviews
             div.clearfix(style="margin:20px 0 40px;")
               div.col-md-3.text-center
-                img(src="#{avaliacao.creation.author.photo}",width="60", height="60").img-circle
+                if avaliacao.creation.author.photo
+                  img(src="#{avaliacao.creation.author.photo}",width="60", height="60").img-circle
                 br
                 | #{avaliacao.creation.author.name}
                 br
@@ -123,18 +124,19 @@ block content
               iframe(width="100%" height="300" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=#{enderecoFormatado}&key=AIzaSyDHYsZARIIjGtIZMVtClCgMxVFC0qPhabQ" allowfullscreen)
           
           // Dados adicionais
-          .card
-            .card-header 
-              h1.nice
-                i.fa.fa-camera
-                | #{space}
-                | Galeria de fotos
-            .card-block.clearfix
-              div.galery-photos
-                each photo in photos
-                  div.galery-photo
-                    img(src="#{photo.small}")
-          
+          if photo
+            .card
+              .card-header 
+                h1.nice
+                  i.fa.fa-camera
+                  | #{space}
+                  | Galeria de fotos
+              .card-block.clearfix
+                div.galery-photos
+                  each photo in photos
+                    div.galery-photo
+                      img(src="#{photo.small}")
+            
           div.clearfix  
             .card
               .card-header
