--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -15,5 +15,6 @@ html(lang='en')
         
       script(src='//code.jquery.com/jquery-2.2.4.min.js')
       script(src='/js/ext/bootstrap.min.js')
+      script(src='/js/script.js')
   body
     block content
