html, css inicial

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -6,9 +6,11 @@
 */
 
 $orange: #ff8207;
+$orange-light: #f18041;
 $yellow: #f9d036;
 $yellow-dark: #e7c132;
 $blue: #2e85c4;
+$gray: #535353;
 
 
 /*
