alteracao - Estrutura de pastas

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,7 +8,7 @@
 
 /*
 +----------------------------------------------------------------+
-:: IMPORT
+:: CONFIG
 +----------------------------------------------------------------+
 */
 
@@ -16,571 +16,35 @@
 @import "_variables";
 @import "_mixins";
 
+
 /*
 +----------------------------------------------------------------+
-:: GENERAL
+:: IMPORT
 +----------------------------------------------------------------+
 */
 
-body{
-	font-family: $font-default;
-	padding-top: 70px;
-}
-
-button{
-	cursor: pointer;
-}
-
-h1{
-	font-size: 30px;
-	font-weight: 700;
-}
-
-h2{
-	font-size: 16px;
-}
-
-h3{
-	font-size: 20px;
-	font-weight: 700;
-}
-
-b, strong{
-	font-weight: 700;
-}
-
-a{
-	text-decoration: none;
-	&:hover{
-		text-decoration: underline;
-	}
-}
-
-p{
-	color: #535353;
-	font-size: 14px;
-	line-height: 18px;
-}
-
-.container{
-	width: 1000px;
-	position: relative;
-	margin: 0 auto;
-}
-
-.background-orange{
-	background: $orange;
-}
-
-.image-sprite{
-	display: inline-block;
-}
-
-.fixed{
-	position: fixed;
-	top: 0;
-	z-index: 999;
-}
-
-.list-inline{
-	li{
-		float: left;
-		margin-right: 5px;
-	}
-}
-
-.title{
-	float: left;
-	color: #333;
-	margin: 10px 0;
-	width: 100%;
-}
-
-.link-blue{
-	color: $blue;
-	text-decoration: none;
-}
-
-.link-gray{
-	color: #969696;
-}
-
-.link-dark-gray{
-	color: $gray;
-}
-
-.link-orange-light{
-	color: $orange-light;
-}
-
-.link-orange{
-	color: $orange;
-}
-
-
-.button-second{
-	border: 1px solid #ded8cd;
-	@include border-radius(3px);
-	padding: 2px 6px;
-	color: $gray;
-	&:hover{
-		background: #efece8;
-		text-decoration: none;
-	}
-}
+@import "modules/_general";
+@import "modules/_header";
+@import "modules/_main";
+@import "modules/_sidebar";
+@import "modules/_footer";
 
 
 /*
 +----------------------------------------------------------------+
-:: HEADER
+:: SPRITE IMAGE
 +----------------------------------------------------------------+
 */
 
-.header{
-	height: 52px;
-	width: 100%;
-	float: left;
-}
+@import "../../build/sprites/sprite.css"
 
-.header-logo{
-	margin: 4px 0 0 0;
-	float: left;
-}
 
-.header-search{
-	float: left;
-	margin: 10px 0 0 20px;
-}
 
-.input-text, .button{
-	height: 30px;
-	border: 0;
-	float: left;
-	margin: 0 0 0 10px;
-	@include border-radius(30px);
-}
 
-.input-text{
-	padding: 0 5px;
-	width: 220px;
-}
 
-.button{
-	width: 60px;
-	background: $yellow;
 
-	&:hover{
-		background: $yellow-dark;
-	}
-}
 
-.header-links{
-	float: left;
-	margin: 18px 0 0 15px;
-	li{
-		a{
-			color: #fff;
-			font-size: 13px;
-			text-decoration: none;
-			&:hover{
-				text-decoration: underline;
-			}
-		}
-	}
-	li.border-right{
-		&:after{
-			content: "|";
-			display: inline-block;
-			color: $gray;
-			width: 5px;
-			margin: 3px 0 0 10px;
-			font-size: 11px;
-			float: right;
-		}
-	}
-}
 
-.flags{
-	margin: 2px 0 0 0;
-	cursor: pointer;
-	&:before{
-		border-color: #fff transparent transparent;
-	    border-style: solid;
-	    border-width: 4px 3px 0;
-	    content: "";
-	    float: right;
-	    margin: 5px 0 0 3px;
-	}
-}
 
-.icon-user{
-	float: left;
-	margin: 0 2px 0 0;
-}
 
 
-/*
-+----------------------------------------------------------------+
-:: MAIN
-+----------------------------------------------------------------+
-*/
-
-.breadcrumb{
-	font-size: 11px;
-	color: #ccc;
-	float: left;
-	width: 100%;
-
-	li.link-arrow{
-		&:before{
-			content: ">";
-			float: right;
-			margin: 0 5px;
-		}
-	}
-
-	a{
-		color: #ccc;
-		&:hover{
-			color: $blue;
-		}
-	}
-}
-
-.main-section{
-	width: 640px;
-	float: left;
-}
-
-.rating-stars{
-	margin-top: -5px;
-}
-
-.rating-infos{
-	float: left;
-	width: 100%;
-	margin: 12px 0;
-	font-size: 12px;
-}
-
-.rating-media, .rating-number, .rating-details{
-	margin: 2px 0 0 5px;
-}
-
-.rating-media{
-	color: #545454;
-}
-
-.gallery{
-	width: 230px;
-	height: 180px;
-	float: left;
-	margin: 10px 20px 0 0;
-	//border: 1px solid #000;
-
-	.image-zoom{
-		//border: 1px solid #000;
-		width: 230px;
-		height: 153px;
-		background: #000;
-	}
-
-	ul{
-		margin: 5px 0;
-		li{
-			//border: 1px solid #333;
-			width: 42px;
-			height: 27px;
-			background: #000;
-		}
-
-		.last{
-			margin-right: 0;
-		}
-	}
-}
-
-.place-info{
-	margin: 10px 0 0 0;
-	float: left;
-	width: 385px;
-	font-size: 12px;
-	color: $gray;
-
-	li{
-		margin-bottom: 18px;
-	}
-}
-
-.icon-phone, .icon-pin, .icon-clock, .icon-arrow, .icon-recommend-gray{
-	float: left;
-}
-
-.icon-phone, .icon-pin, .icon-clock, .icon-arrow{
-	margin-right: 15px;
-}
-
-.icon-phone{
-	margin-top: -1px ;
-}
-
-.icon-pin{
-	margin-top: 4px;
-}
-
-.icon-recommend-gray{
-	margin-right: 8px;
-}
-
-.recommend{
-	float: left;
-	margin-left: -3px;
-	span{
-		float: right;
-		margin: 3px 0 0 5px;
-	}
-}
-
-.phone{
-	color: $gray;	
-	&:hover{
-		color: $blue;
-	}
-}
-
-.icon-recommend{
-	margin: 2px 0 0 0;
-}
-
-.tabs{
-	float: left;
-	margin: 85px 0 40px 0;
-	width: 100%;
-	border-top: 1px dotted #ccc;
-	padding: 20px 0;
-}
-
-.tabs-nav{
-	float: left;
-	width: 100%;
-	padding-bottom: 10px;
-	border-bottom: 1px dotted #ccc;
-	margin-bottom: 10px;
-	li{
-		margin-right: 20px;
-		a{
-			color:#979797;
-			font-size: 12px;
-			text-transform: uppercase;
-			padding-bottom: 8px;
-			font-weight: bold;
-			&:hover{
-				text-decoration: none;
-			}
-		}
-		.active{
-			color: #333;
-			border-bottom: 3px solid $orange;
-
-		}
-	}
-}
-
-.tab-content{
-	h3{
-		font-size: 16px;
-		font-weight: normal;
-	}
-}
-
-
-.news-outbrain{
-	width: 640px;
-	float: left;
-	border-bottom: 1px dotted #ccc;
-	margin-bottom: 40px;
-}
-
-.news{
-	width: 310px;
-	//height: 200px;
-	margin: 0 10px 10px 0;
-	float: left;
-}
-
-.news-image{
-	width: 120px;
-	height: 80px;
-	float: left;
-	background: #000;
-	margin: 0 10px 0 0;
-}
-
-.news-txt{
-	float: left;
-	width: 180px;
-}
-
-.news-txt-title{
-	font-size: 14px;
-	color: 000;
-}
-
-.news-txt-font{
-	display: block;
-	font-size: 11px;
-	color: #888;
-	margin-top: 5px;
-}
-
-.recommend-outbrain{
-	color: #999;
-	font-size: 11px;
-	margin: 20px 15px -10px 0;
-	float: right;
-	&:hover{
-		text-decoration: none;
-		i{
-			 background-position: -91px -50px;
-		}
-	}
-}
-
-.title-aval{
-	font-size: 30px;
-	color: #333;
-	font-weight: normal;
-}
-
-
-
-
-/*
-+----------------------------------------------------------------+
-:: SIDEBAR
-+----------------------------------------------------------------+
-*/
-
-.sidebar{
-	width: 300px;
-	float: right;
-}
-
-.similar-places{
-	width: 300px;
-	//height: 61px;
-	float: left;
-	margin: 10px 0 0 0;
-	//border: 1px solid #000;
-	//background: #000;
-
-	li{
-		margin-bottom: 10px;
-		//background: #fef4b9;
-		padding: 5px;
-		float: left;
-	}
-}
-
-.similar-place-first{
-	background: #fef4b9;
-}
-
-.similar-places-infos{
-	float: right;
-	width: 210px;
-	height: 50px;
-	font-size: 12px;
-	margin-left: 5px;
-
-	span{
-		float: left;
-		width: 100%;
-		margin: 5px 0 0 0;
-		color: #979797;
-	}
-}
-
-.similar-places-number-aval{
-	font-size: 10px;
-}
-
-.similar-places-category{
-	font-size: 11px;
-}
-
-.similar-places-title{
-	float: left;
-}
-
-.bottom-similar-box{
-	float: left;
-	width: 100%;
-	font-size: 11px;
-	text-align: center;
-}
-
-.border-bottom-similar{
-	width: 110px;
-	height: 1px;
-	border-bottom: 1px dotted #ccc;
-	float: left;
-	margin: 4px 0 0 0;
-}
-
-.link-bottom-similar{
-	float: left;
-	margin: 0 10px;
-}
-
-
-
-/*
-+----------------------------------------------------------------+
-:: FOOTER
-+----------------------------------------------------------------+
-*/
-
-.footer{
-	width: 100%;
-	//height: 165px;
-	background: #333;
-	padding: 35px 0;
-	float: left;
-	margin-top: 20px;
-	font-size: 12px;
-
-	span{
-		color: #a9a9aa;
-	}
-
-	.line{
-		margin: 0 0 8px 0;
-	}
-
-	.border-right{
-		&:after{
-			content: "|";
-			color: $orange;
-			float: right;
-			margin: 0 5px;
-		}
-	}
-}
-
-.item-footer{
-	float: left;
-	width: 100%;
-	margin: 0 0 8px 0;
-}
-
-.footer-content{
-	width: 800px;
-	float: left;
-}
-
-.social-media{
-	float: right;
-	width: 190px;
-	margin: 20px 0 0 0;
-}
