--- a/src/sass/modules/_general.scss
+++ b/src/sass/modules/_general.scss
@@ -42,6 +42,7 @@ p{
 	color: #535353;
 	font-size: 14px;
 	line-height: 18px;
+	margin: 5px 0;
 }
 
 .container{
@@ -99,6 +100,26 @@ p{
 	color: $orange;
 }
 
+.link-gray{
+	color: $gray;
+	&:hover{
+		color: $blue;
+	}
+}
+
+.button-link-orange{
+	background-color: $orange-dark;
+	@include border-radius(3px);
+	text-align: center;
+	color: #fff;
+	//font-weight: 700;
+	font-size: 12px;
+	padding: 5px 10px;
+
+	&:hover{
+		text-decoration: none;
+	}
+}
 
 .button-second{
 	border: 1px solid #ded8cd;
@@ -114,4 +135,14 @@ p{
 .image-border{
 	border: 1px solid #e3e3e3;
 	padding: 3px;
+}
+
+.msg-not-content{
+	float: left;
+	width: 100%;
+	text-align: center;
+	font-weight: 700;
+	color: #000;
+	padding-top: 15px;
+	//margin: 40px 0 0 0;
 }
