--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -14,7 +14,7 @@
 @import 'widget/image-featured.less';
 @import 'widget/carousel.less';
 @import 'widget/list.less';
-@import 'widget/reviews-stars.less';
+@import 'widget/stars.less';
 
 //Widgets
 @import 'pages/detalhe.less';
