--- a/app/views/detalhe.html
+++ b/app/views/detalhe.html
@@ -15,7 +15,7 @@
 			<header>
 				<h1 class="font-h1">{{place.name}}</h1>
 				<div class="reviews">
-					<widget-reviews-stars content="place.statistics.rating" total="place.statistics.rating"></widget-reviews-stars>
+					<widget-stars content="place.statistics.rating" total="place.statistics.rating"></widget-stars>
 				</div>
 			</header>
 
