Adding reviews and routes

--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -10,16 +10,17 @@ body {
 
   > footer {
     margin: 0 auto;
-    position: inherit;
     background-color: #333;
     color: @baseheader;
-    bottom: 0;
     width: 100%;
     padding: 20px 0;
+    clear: both;
   }
 
   h1, h2, h3, h4, h5, h6 {
     color: @fontTitle;
+    margin-top: 5px;
+    margin-bottom: 5px;
   }
 
   h1 {
@@ -114,6 +115,10 @@ body {
 
   .ki-col-2-5 {
     width: 70%;
+  }
+
+  .ki-col-8-7 {
+    width: 87.5%;
   }
 
   .ki-col {
