--- a/src/components/local.html
+++ b/src/components/local.html
@@ -10,7 +10,7 @@
     <local-photos ng-if="placePhotos"></local-photos>
     <div class='ki-col-4 section'>
       <span class="place-text">
-        O Parque Ibirapuera é o parque urbano mais importante da cidade de São Paulo e foi inaugurado dia 21 de agosto de 1954. No parque a população conta com ciclovia, treze quadras iluminadas,pistas destinadas a cooper, passeios e descanso, todas integradas à área cultural.
+        {{place.description}}
       </span>
       <span class="map-content">
         <img src="{{mapUrl}}" height="100%" width="100%">
@@ -19,28 +19,8 @@
       </span>
     </div>
   </div>
-  <div>
-    <span>TESTEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEErheuiwhrwrui hweuirh weuihruiwe hruiweh uirhwe ruihewuirhweui rheuiwhr uiwhuirweirh </span>
-    <span>TESTEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEErheuiwhrwrui hweuirh weuihruiwe hruiweh uirhwe ruihewuirhweui rheuiwhr uiwhuirweirh </span>
-    <span>TESTEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEErheuiwhrwrui hweuirh weuihruiwe hruiweh uirhwe ruihewuirhweui rheuiwhr uiwhuirweirh </span>
-    <span>TESTEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEErheuiwhrwrui hweuirh weuihruiwe hruiweh uirhwe ruihewuirhweui rheuiwhr uiwhuirweirh </span>
-    <span>TESTEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEErheuiwhrwrui hweuirh weuihruiwe hruiweh uirhwe ruihewuirhweui rheuiwhr uiwhuirweirh </span>
-    <span>TESTEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEErheuiwhrwrui hweuirh weuihruiwe hruiweh uirhwe ruihewuirhweui rheuiwhr uiwhuirweirh </span>
-    <span>TESTEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEErheuiwhrwrui hweuirh weuihruiwe hruiweh uirhwe ruihewuirhweui rheuiwhr uiwhuirweirh </span>
-    <span>TESTEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEErheuiwhrwrui hweuirh weuihruiwe hruiweh uirhwe ruihewuirhweui rheuiwhr uiwhuirweirh </span>
-    <span>TESTEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEErheuiwhrwrui hweuirh weuihruiwe hruiweh uirhwe ruihewuirhweui rheuiwhr uiwhuirweirh </span>
-    <span>TESTEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEErheuiwhrwrui hweuirh weuihruiwe hruiweh uirhwe ruihewuirhweui rheuiwhr uiwhuirweirh </span>
-    <span>TESTEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEErheuiwhrwrui hweuirh weuihruiwe hruiweh uirhwe ruihewuirhweui rheuiwhr uiwhuirweirh </span>
-    <span>TESTEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEErheuiwhrwrui hweuirh weuihruiwe hruiweh uirhwe ruihewuirhweui rheuiwhr uiwhuirweirh </span>
-    <span>TESTEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEErheuiwhrwrui hweuirh weuihruiwe hruiweh uirhwe ruihewuirhweui rheuiwhr uiwhuirweirh </span>
-    <span>TESTEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEErheuiwhrwrui hweuirh weuihruiwe hruiweh uirhwe ruihewuirhweui rheuiwhr uiwhuirweirh </span>
-    <span>TESTEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEErheuiwhrwrui hweuirh weuihruiwe hruiweh uirhwe ruihewuirhweui rheuiwhr uiwhuirweirh </span>
-    <span>TESTEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEErheuiwhrwrui hweuirh weuihruiwe hruiweh uirhwe ruihewuirhweui rheuiwhr uiwhuirweirh </span>
-    <span>TESTEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEErheuiwhrwrui hweuirh weuihruiwe hruiweh uirhwe ruihewuirhweui rheuiwhr uiwhuirweirh </span>
-    <span>TESTEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEErheuiwhrwrui hweuirh weuihruiwe hruiweh uirhwe ruihewuirhweui rheuiwhr uiwhuirweirh </span>
-    <span>TESTEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEErheuiwhrwrui hweuirh weuihruiwe hruiweh uirhwe ruihewuirhweui rheuiwhr uiwhuirweirh </span>
-    <span>TESTEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEErheuiwhrwrui hweuirh weuihruiwe hruiweh uirhwe ruihewuirhweui rheuiwhr uiwhuirweirh </span>
-    <span>TESTEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEErheuiwhrwrui hweuirh weuihruiwe hruiweh uirhwe ruihewuirhweui rheuiwhr uiwhuirweirh </span>
-    <span>TESTEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEErheuiwhrwrui hweuirh weuihruiwe hruiweh uirhwe ruihewuirhweui rheuiwhr uiwhuirweirh </span>
+  <div class="row">
+    <reviews placeid="placeId" class='ki-col-2-5'></reviews>
+    <similar-places city="place.address.city" vanityname='place.categories[0].subcategory.vanityName' placeid='placeId' class='ki-col-4'></similar-places>
   </div>
 </div>
