--- a/src/components/partials/localPhotos.html
+++ b/src/components/partials/localPhotos.html
@@ -3,7 +3,7 @@
     <img src="{{imageSelected.large}}" class='img-slide'>
     <ol class='ki-col-8'>
       <li ng-repeat="img in photos">
-        <img src="{{img.small}}" class="carousel-indicators" ng-click="selectImage(img)">
+        <img src="{{img.small}}" class="carousel-indicators" ng-class="{'selected': img.id === imageSelected.id}" ng-click="selectImage(img)">
       </li>
       <li ng-click="selectImage(placePhotos.photos[6])">
         <img src="{{placePhotos.photos[6].small}}" class="carousel-indicators" >
