--- a/src/assets/less/components/local.less
+++ b/src/assets/less/components/local.less
@@ -13,7 +13,7 @@
     opacity: 0.7;
     filter: alpha(opacity=70);
 
-    &:hover {
+    &:hover, &.selected {
       opacity: 1;
       filter: alpha(opacity=100);
     }
@@ -23,7 +23,7 @@
     &:extend(.border-img);
     margin-right: 5px;
     width: 82%;
-    height: 100%;
+    max-height: 506px;
   }
 
   ol {
@@ -94,8 +94,10 @@ i {
 
 .back-stars {
     &:extend(.flex-display);
-    color: #dadada;
     position: relative;
+    .fa.fa-star {
+      color: #dadada;
+    }
 }
 .front-stars {
     &:extend(.flex-display);
@@ -153,4 +155,40 @@ i {
   right: 7px;
   bottom: 40px;
   color: #f9f6f3;
+}
+
+.reviews {
+  img {
+    width: 80%;
+    border-radius: 50px;
+    height: 75px;
+  }
+
+  .review-text {
+    font-size: 0.8em;
+  }
+
+  .star-rating{
+    font-size: 14px;
+    padding: 5px;
+    width: 70px;
+    float: left;
+  }
+
+  ul {
+    li {
+      padding: 15px;
+      margin: 5px;
+      margin-right: 20px;
+      border: 1px solid #d6d6d6;
+      border-radius: 10px;
+      box-shadow: 0px 0px 5px #dadada;
+
+      p {
+        overflow: hidden;
+        max-height: 60px;
+        text-overflow: ellipsis;
+      }
+    }
+  }
 }
