Changing review screen

--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -129,6 +129,14 @@ body {
     margin: 10px 0;
   }
 
+  .pull-right {
+    float: right;
+  }
+
+  .pull-left {
+    float: left;
+  }
+
   .title {
     font-size: 25px;
     font-weight: bold;
