--- a/src/assets/less/components/local.less
+++ b/src/assets/less/components/local.less
@@ -164,8 +164,17 @@ i {
     height: 75px;
   }
 
+  .pull-right {
+    font-size: 13px;
+    cursor: pointer;
+  }
+
   .review-text {
     font-size: 0.8em;
+
+    &.show {
+      max-height: 100%;
+    }
   }
 
   .star-rating{
@@ -183,6 +192,7 @@ i {
       border: 1px solid #d6d6d6;
       border-radius: 10px;
       box-shadow: 0px 0px 5px #dadada;
+      padding-bottom: 35px;
 
       p {
         overflow: hidden;
