--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -8,6 +8,10 @@ body {
   color: @fontGeneral;
   line-height: 1.5;
 
+  a:visited {
+    color: inherit;
+  }
+
   > footer {
     margin: 0 auto;
     background-color: #333;
@@ -15,6 +19,14 @@ body {
     width: 100%;
     padding: 20px 0;
     clear: both;
+    font-size: 12px;
+
+    a{
+      color: @brandcolor;
+      &.brand {
+        margin-bottom: 5px;
+      }
+    }
   }
 
   h1, h2, h3, h4, h5, h6 {
@@ -54,6 +66,34 @@ body {
     .brand {
       margin-left: -15px;
     }
+  }
+
+  .btn {
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.42857143;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 10px;
+  }
+
+  .btn-default {
+    color: #333;
+    background-color: #fff;
+    border-color: #ccc;
   }
 
   .container {
