--- a/src/components/partials/reviews.html
+++ b/src/components/partials/reviews.html
@@ -20,5 +20,5 @@
       </div>
     </li>
   </ul>
-  <button>Carregar mais</button>
+  <button class="btn btn-default pull-right" ng-click="showMore(reviewResults.header.start, reviewResults.header.rows)" ng-hide="reviewResults.header.found <= reviewResults.reviews.length">Carregar mais</button>
 </div>
