--- a/src/components/partials/similarPlaces.html
+++ b/src/components/partials/similarPlaces.html
@@ -1,8 +1,15 @@
-<div>
+<div class="similar-places">
+  <h3>Lugares semelhantes</h3>
   <ul>
-    <li ng-repeat="place in places">
+    <li ng-repeat="place in places" class="ki-col">
       <a href="#/local/{{place.id}}">
-        <span>{{place.name}}</span>
+        <aside class="ki-col-4">
+          <img src="https://d31a08puryq8et.cloudfront.net/apps/sponsoredplacepromoted/files/placeholder.png">
+        </aside>
+        <aside class="ki-col-2-5">
+          <span class="ki-col">{{place.name}}</span>
+          <star-rating rating='place.statistics.rating'></star-rating>
+        </aside>
       </a>
     </li>
   </ul>
