Adding Apontador routes, removing console.log

--- a/src/components/local.html
+++ b/src/components/local.html
@@ -12,7 +12,7 @@
       <span class="place-text">
         {{place.description}}
       </span>
-      <span class="map-content">
+      <span class="map-content" ng-click="gotoApontador()">
         <img src="{{mapUrl}}" height="100%" width="100%">
         <span class="map-bg"></span>
         <span class="map-text"><i class="fa fa-map-marker" aria-hidden="true"></i> ver mapa</span>
